--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-auth-organization",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "jest"
