--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "user-auth-organization",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "nodemon app.js",
     "test": "jest"
