--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
-    "build": [
-        {
-            "src": "app.js",
-            "use": "@vercel/node"
-        }
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "/app.js"
+      }
     ]
-}
+  }
+  
